Fixed spot detail image overflow bug

--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -45,15 +45,20 @@
     gap: 5px;
 }
 
-.i1 {
-    height: 390px;
+.main-image-container {
+    height: 100%;
     width: 50%;
+}
+
+.i1 {
+    height: 100%;
+    width: 100%;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
 
 .other-image-container {
-    height: 390px;
+    height: 100%;
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -61,23 +66,23 @@
 }
 
 .i2 {
-    height: 50%;
+    height: 195px;
     width: 100%;
 }
 
 .i3 {
-    height: 50%;
+    height: 195px;
     width: 100%;
 }
 
 .i4 {
-    height: 50%;
+    height: 195px;
     width: 100%;
     border-top-right-radius: 20px;
 }
 
 .i5 {
-    height: 50%;
+    height: 195px;
     width: 100%;
     border-bottom-right-radius: 20px;
 }
